# Beacon

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  PLAN.md  PROGRESS.md  README.md  SPEC.md  VERIFY-COUNTRIES.md  run.sh
backend/: pyproject.toml
backend/beacon/: classify.py  config.py  ingest.py  refresh.py
backend/beacon/adapters/: seeds.py
backend/beacon/api/: app.py  companies.py  countries.py  deps.py  jobs.py  resumes.py  searches.py  settings.py
backend/beacon/application/: backfill.py  company_health.py  countries.py  dedup.py  deep_match.py  errors.py  flag_sponsor.py  health_report.py  ingest.py  notify.py  ports.py  probe.py  queries.py  refresh_registries.py  resumes.py  scoring.py  searches.py  settings.py
backend/beacon/domain/: classification.py  company.py  countries.py  dedup.py  descriptions.py  digest.py  health.py  hn.py  job.py  location.py  matching.py  notification.py  rationale.py  registry.py  resume.py  saved_search.py  sponsorship.py  status.py  visa.py  vocabulary.py
backend/beacon/scheduler/: __main__.py  schedule.py
backend/migrations/: 001_companies_jobs.sql  002_registries_meta.sql  003_saved_searches.sql  004_app_settings.sql  005_llm_usage.sql  006_countries.sql  007_job_misses.sql  008_resumes_match_scores.sql  009_drop_llm_rationale.sql
backend/scripts/: backup_db.py  spot_check_classifier.py  spot_check_digest.py  spot_check_health.py  spot_check_hn.py  spot_check_llm.py  spot_check_registry.py  spot_check_sponsorship.py
backend/tests/: conftest.py  test_db_migrations.py  test_healthz.py
frontend/: index.html  (+4 more)
(+175 files in other folders)
